@@ -4,7 +4,7 @@
 \alias{autofit}
 \title{Adjusts cell widths and heights}
 \usage{
-autofit(x, add_w = 0.1, add_h = 0.1)
+autofit(x, add_w = 0.1, add_h = 0.1, part = "all")
 }
 \arguments{
 \item{x}{flextable object}
@@ -12,6 +12,8 @@ autofit(x, add_w = 0.1, add_h = 0.1)
 \item{add_w}{extra width to add in inches}
 
 \item{add_h}{extra height to add in inches}
+
+\item{part}{partname of the table (one of 'all', 'body', 'header' or 'footer')}
 }
 \description{
 compute and apply optimized widths and heights.
